@@ -43,6 +43,7 @@ return [
     'locale_fr' => 'Francais',
     'locale_pt-br' => 'Portugais',
     'locale_ru' => 'Russe',
+    'locale_cz' => 'Tchèque',
 
     'users_list_title' => 'Users with access to your account',
     'users_list_add_user' => 'Invite a new user',
