@@ -42,6 +42,7 @@ return [
     'locale_en' => 'Inglês',
     'locale_fr' => 'Francês',
     'locale_pt-br' => 'Português',
+    'locale_cz' => 'Czech',
 
     'users_list_title' => 'Users with access to your account',
     'users_list_add_user' => 'Invite a new user',
