@@ -1,6 +1,7 @@
 UNRELEASED CHANGES:
 
-*
+* Add Czech translation
+* Fix https issue on password reset
 
 RELEASED VERSIONS:
 
